Fix history mode not centered

--- a/customize.dist/src/less2/include/toolbar-history.less
+++ b/customize.dist/src/less2/include/toolbar-history.less
@@ -4,6 +4,7 @@
     .cp-toolbar-history {
         display: none;
         text-align: center;
+        width: 100%;
         * {
             font: @colortheme_app-font;
         }
